htdocs/stc/lj_base-app.css
/*
    This is utility css that can be used anywhere in the app
    It should be included on all app pages in all schemes
*/

/* .pkg class wraps enclosing block element around inner floated elements */
.pkg:after {
    content: " ";
    display: block;
    visibility: hidden;
    clear: both;
    height: 0.1px;
    font-size: 0.1em;
    line-height: 0;
}
.pkg { display: inline-block; }
/* no ie mac \*/
* html .pkg { height: 1%; }
.pkg[class] { height: auto; }
.pkg { display: block; }
/* */

/* form styles */
label.left {
    display: block;
    float: left;
}
input.text,
textarea.text,
select.select {
    margin: 0px 3px 0px 0px;
    padding: 2px 2px;
}
select.select {
    padding: 1px;
}
fieldset.nostyle {
    border: none;
    margin: 0;
    padding: 0;
}
input.create-account {
    font-size: 110%;
    margin: 0;
}

.detail {
    font-size: smaller;
}
p.detail {
    margin: 0 0 10px 0;
    padding: 0;
}
h2.widget-header {
    margin: 0 0 6px 0;
    padding: 0 0 6px 0;
}
ul.detail li {
    font-size: 90%;
}
hr.hr {
    border: 0;
    width: 100%;
    height: 1px;
}
/* generic class for removing styling from ul */
ul.nostyle {
    list-style: none;
    margin: 0;
    padding: 0;
}

/* columns for content layouts */

div.columns-2 .columns-2-left {
    float: left;
    width: 49%;
}
div.columns-2 .columns-2-right {
    float: right;
    width: 49%;
}
div.columns-2-r300 {
    width: 720px;
}
div.columns-2-r300 .columns-2-left {
    float: left;
    width: 405px;
    margin-right: 15px;
}
div.columns-2-r300 .columns-2-right {
    float: left;
    width: 300px;
}

.action-box {
    margin: 0.5em auto 0 auto;
    /* centering */
    position: relative;
    float: right;
    left: -50%;
}
.action-box .inner {
    padding: 0.5em;
    position: relative;
    float: left;
    left: 50%;
}
.action-box li {
    float: left;
    position: relative;
    margin: 0 0.2em;
}

/* default margin for widgets */

.appwidget {
    margin-bottom: 15px;
    position: relative;
}
.appwidget .more-link {
    position: absolute;
    right: 7px;
    top: 6px;
    font-size: 11px;
    text-decoration: none;
    padding-left: 10px;
    text-transform: lowercase;
}
.appwidget .more-link:hover {
    text-decoration: underline;
}

.arrow-link,
.more-link {
    padding-left: 12px;
}

/* Used to encapsualte message forms like Invite and Tell a Friend */
.message {
    margin-bottom: 15px;
}

.message blockquote {
    margin: 0;
    padding: 15px;
}

.helper {
    font-size: 0.8em;
}

.formitemName {
    font-weight: bold;
    font-size: 1.2em;
    margin-top: 10px;
}

/**
  * Apply a baseline display to all user-generated content
  */
.usercontent h1,
.usercontent h2,
.usercontent h3,
.usercontent h4,
.usercontent h5,
.usercontent h6,
.usercontent strong,
.usercontent dt {
    font-weight: bold;
}
.usercontent ul,
.usercontent ol,
.usercontent dl,
.usercontent menu {
    margin: 1em;
}
.usercontent blockquote {
  display: block;
  margin: 1em 40px;
}
.usercontent ul,
.usercontent ol,
.usercontent dl,
.usercontent menu,
.usercontent dl dd {
    margin-left: 2em;
}
.usercontent ol > li {
    list-style: decimal outside;
}
.usercontent ul > li { 
    list-style: disc outside;
}
.usercontent sup {
    vertical-align: super;
    font-size: smaller;
}
.usercontent sub { 
    vertical-align: sub;
    font-size: smaller;
}
.usercontent p,
.usercontent fieldset,
.usercontent table,
.usercontent pre { 
    margin-bottom: 1em;
}

/* clearing element at the foot of Support index */
.clear-floats { clear: both; }

